--- a/style.css
+++ b/style.css
@@ -1,43 +1,85 @@
-.cabeçalho {
-     background-color: rgb(18, 18, 192);
-     color:white; 
-     display: flex;
-     justify-content: space-around;
-     align-items: center;
+*{
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family: 'Poppins', sans-serif;
+}
+.cabecalho {
+    background-color: #424E61;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
 }
 
-.cabeçalho-lista { 
-     color: rgba(0, 0, 0, 0.979);
-}
- 
-.cabeçalho-lista-item {
-     color: white;
+.cabecalho-imagem{
+    width: 10%;
 }
 
-.titulo-1 { 
-     color:rgb(3, 3, 46);
-     padding: 40px;     
-     text-align: center;
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
+    font-size: 16px;
 }
 
-.texto-1 { color: black;
+.escola-imagem{
+    width: 25%;
 }
 
-.texto-cor { 
-     background-color: rgb(203, 193, 233);
-     padding: 20px;
+.escola{
+    background-image: linear-gradient(#424E61,#16CFF8);
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
 }
 
-.meio-texto-1 { 
-     padding: 40px;
-     text-align: center;
-}
-
-.rede-social{ 
-     image-resolution: 10px;
+.escola-div-conteudo{
+    width: 35%;
 }
 
 
+.escola-titulo{
+    padding: 24px 0;
+}
 
+.estudante{
+    padding: 24px 0;
+}
+.estudante-imagem{
+    width: 120px;
+}
 
+.estudante-icone{
+    width: 24px;
+    padding: 4px 8px;
+}
 
+.estudante-div{
+    text-align: center;
+    padding: 16px 0;
+}
+
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+}
+
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
+
+.rodape{
+    background-color: black;
+    text-align: center;
+}
+
+.rodape-imagem{
+    height: 60px;
+    padding: 12px 0;
+   
+}
